@@ -20,6 +20,7 @@ Broker:
   #209.
 - Fix bridge publishing failing when per_listener_settings was true. Closes
   #860.
+- Fix `use_identity_as_username true` not working. Closes #833.
 
 Library:
 - Fix some places where return codes were incorrect, including to the
